new demo group for using [] as group name

--- a/demo.html
+++ b/demo.html
@@ -112,6 +112,28 @@
 				</table>
 			</fieldset>
 
+			<fieldset data-form-group="group2">
+				<legend>Group 2 - split name and [ ]</legend>
+				<div data-form-group="[]">
+					<input type="checkbox" data-form-name="tick">tick
+					<input type="radio" data-form-name="rd" value="1">1
+					<input type="radio" data-form-name="rd" value="2">2
+					<input type="radio" data-form-name="rd" value="3">3
+				</div>
+				<div data-form-group="[]">
+					<input type="checkbox" data-form-name="tick">tick
+					<input type="radio" data-form-name="rd" value="1">1
+					<input type="radio" data-form-name="rd" value="2">2
+					<input type="radio" data-form-name="rd" value="3">3
+				</div>
+				<div data-form-group="[]">
+					<input type="checkbox" data-form-name="tick">tick
+					<input type="radio" data-form-name="rd" value="1">1
+					<input type="radio" data-form-name="rd" value="2">2
+					<input type="radio" data-form-name="rd" value="3">3
+				</div>
+			</fieldset>
+			
 			<fieldset data-form-group="constructor_data" data-form-constructor="demo_constr">
 				<legend>Simple constructor</legend>
 				<table>
