replace data-form-group with data-form-name add data-form-ignore setData should now support [] correctly

--- a/demo.html
+++ b/demo.html
@@ -70,7 +70,7 @@
 				</tr>
 			</table>
 
-			<fieldset data-form-group="group1">
+			<fieldset data-form-name="group1">
 				<legend>group1</legend>
 				<table border="1">
 					<tr>
@@ -112,29 +112,29 @@
 				</table>
 			</fieldset>
 
-			<fieldset data-form-group="group2">
+			<fieldset data-form-name="group2">
 				<legend>Group 2 - split name and [ ]</legend>
-				<div data-form-group="[]">
+				<div data-form-name="[]">
 					<input type="checkbox" data-form-name="tick">tick
 					<input type="radio" data-form-name="rd" value="1">1
 					<input type="radio" data-form-name="rd" value="2">2
 					<input type="radio" data-form-name="rd" value="3">3
 				</div>
-				<div data-form-group="[]">
+				<div data-form-name="[]">
 					<input type="checkbox" data-form-name="tick">tick
 					<input type="radio" data-form-name="rd" value="1">1
 					<input type="radio" data-form-name="rd" value="2">2
 					<input type="radio" data-form-name="rd" value="3">3
 				</div>
-				<div data-form-group="[]">
+				<div data-form-name="[]">
 					<input type="checkbox" data-form-name="tick">tick
 					<input type="radio" data-form-name="rd" value="1">1
 					<input type="radio" data-form-name="rd" value="2">2
 					<input type="radio" data-form-name="rd" value="3">3
 				</div>
 			</fieldset>
-			
-			<fieldset data-form-group="constructor_data" data-form-constructor="demo_constr">
+
+			<fieldset data-form-name="constructor_data" data-form-constructor="demo_constr">
 				<legend>Simple constructor</legend>
 				<table>
 					<tbody>
