add "clear" method clear form before setting data

--- a/demo.html
+++ b/demo.html
@@ -18,6 +18,7 @@
 			<p>
 				<input type="button" name="get" value="Get data">
 				<input type="button" name="set" value="Set data">
+				<input type="button" name="clear" value="Clear">
 			</p>
 		</div>
 
